k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-app-service
  namespace: default
  labels:
    app: springboot-app
spec:
  selector:
    app: springboot-app
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: springboot-app-nodeport
  namespace: default
  labels:
    app: springboot-app
spec:
  selector:
    app: springboot-app
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  type: NodePort
